[package]
name = "click_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.51.1"
winput = "0.2.5"
image = "0.24.7"
win-screenshot = "4.0.5"
template-matching = { version = "0.2.0", features = ["image"] }
crossterm = "0.27.0"
serde = "1.0.189"
serde_json = "1.0.107"
serde_derive = "1.0.189"


